Fixed unwanted scrollbars on values layer.

--- a/modules/gui/docker/frontend/src/app/home/map/valuesLayer.module.css
+++ b/modules/gui/docker/frontend/src/app/home/map/valuesLayer.module.css
@@ -12,6 +12,7 @@
 .value {
     margin: auto;
     color: #ccc;
+    overflow: hidden;
 }
 
 .value.clamping {
